--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <script type="text/javascript" src="js/vendor/howler.min.js"></script>
     <script type="text/javascript" src="js/vendor/knockout-2.3.0.js"></script>
-    <script type="text/javascript" src="js/app/soundbus.js"></script>
+    <script type="text/javascript" src="js/app/soundBus.js"></script>
     <script type="text/javascript" src="js/app/weaponSound.js"></script>
     <script type="text/javascript" src="js/app/weapon.js"></script>
     <script type="text/javascript" src="js/app/indexViewModel.js"></script>
