--- a/notes.html
+++ b/notes.html
@@ -79,7 +79,7 @@
                 birds and insects in Blood Gulch, or a defeaning bass drone in
                 Chill Out (the ambient bass drone on this map is just as loud as
                 firing a weapon).</p>
-            <p>Halo 2 was challenging because the game audio crackled on got distorted
+            <p>Halo 2 was challenging because the game audio crackled and got distorted
                 regularly. I don't know why that is, but I suspect it may have to
                 do with playing an original XBox game on the XBox 360. I tried to
                 avoid these situations but you may hear some distortion in some 
