fixed some styles

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         <hr/>
         <div class="sound-container">
-            <h3>Disclaimer</h3>
+            <h3 class="sound-title">Disclaimer</h3>
             <p>This site's owner and author claims no ownership or rights to the audio
                 on this site. The Halo video game audio was beautifully produced
                 by <a href="http://bungie.net">Bungie</a> and 
@@ -55,13 +55,13 @@
         </div>
 
         <div class="sound-container">
-            <h3>Built With...</h3>
+            <h3 class="sound-title">Built With...</h3>
             <p>This site was built with Twitter Bootstrap, knockout.js, and
                 howler.js.</p>
         </div>
 
         <div class="sound-container">
-            <h3>Built By...</h3>
+            <h3 class="sound-title">Built By...</h3>
             <p>This site was built by Mike Hodnick.</p>
             <p><a href="http://twitter.com/kindohm">@kindohm</a></p>
         </div>
