--- a/notes.html
+++ b/notes.html
@@ -32,7 +32,7 @@
                 as I did.</p>
 
             <h3>What is in this Collection</h3>
-            <p>The collection of sounds on this site only include multiplayer
+            <p>The collection of sounds on this site only includes multiplayer
                 weapons that can be obtained through either normal game play
                 or through the Forge. The following games are included:</p>
             <ul>
@@ -92,7 +92,7 @@
                 ambient sounds in the maps and the weapons. This made capturing
                 the sounds much easier.</p>
             <p>Not much else to say about Halo 3, other than the Missle Pod was
-                kind fun to listen to again.</p>
+                kind of fun to listen to again.</p>
 
             <h3>Halo: Reach</h3>
 
@@ -106,7 +106,7 @@
             <h3>Halo 4 Overhaul</h3>
             <p>In Halo 4, every weapon sound got a major overhaul. Not only that,
                 but the Halo 4 sounds seem crisper and full of sublteties that
-                didn't exist in the previous games. Last, the Halo 4 weapons also
+                didn't exist in the previous games. The Halo 4 weapons also
                 have a <strong>lot</strong> more <em>punch</em>. In Halo 4
                 the sounds hit <em>hard</em>! My favorites in Halo 4 include:</p>
 
